<resources>
    <string name="app_name">iAlbum Qatar 2022</string>
    <string name="placeholder">Argentina</string>
    <string name="sticker_completion">%1$s / %2$s</string>
    <string name="plural_nation">Nações com mais figurinhas</string>
    <string name="singular_nation">Nação com mais figurinhas:</string>
    <string name="sticker_obtained">Figurinhas já obtidas</string>
    <string name="plural_nation_least">Nações com menos figurinhas</string>
    <string name="singular_nation_least">Nação com menos figurinhas:</string>
    <string name="percentage">%1$s</string>
    <string name="update">atualizar</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="add">Adicionar</string>
    <string name="repeated">Repetida :(</string>
    <string name="added">Adicionada!</string>
    <string name="stop">Parar</string>
    <string name="restart">Recomeçar</string>
    <string name="use_camera_and_register">Use sua câmera e registre sua figurinha</string>
    <string name="not_identified">N/A</string>
    <string name="sticker_list">Lista de figurinhas</string>
    <string name="sticker_repeated">Figurinhas repetidas</string>
    <string name="sticker_missing">Figurinhas faltantes</string>
    <string name="open_room">Abrir uma sala</string>
    <string name="enter_room">Entrar em uma sala</string>
    <string name="dialog_title">Como funciona?</string>
    <string name="explanation">Um colecionador deverá abrir a sala enquanto o outro se conecta, dessa forma irão compartilhar seus álbuns!</string>
    <string name="cancel">cancelar</string>
    <string name="accept">OK</string>
    <string name="sticker_going_to_receive">Figurinha a receber</string>
    <string name="sticker_going_to_give">Figurinha a dar</string>
    <string name="confirm">confirmar</string>
    <string name="perm_request_rationale_title">Você tem certeza?</string>
    <string name="perm_request_rationale">Sem a permissão o app nào funcionará corretamente</string>
    <string name="request_perm_again">Tentar novamente</string>
    <string name="dismiss">cancelar</string>
    <string name="amount_repeated">Quantidade de figurinhas repetidas</string>
    <string name="name_edit_text">Nome</string>
    <string name="room_opened">Sala aberta com nome: %1$s</string>
</resources>